--- a/index.html
+++ b/index.html
@@ -58,14 +58,19 @@
                 alt="Share Icon"
                 class="icon share-icon"
               />
-              <div class="share-container">
-                <p class="share-text">Share</p>
-                <img src="images/icon-facebook.svg" alt="Facebook logo" class="icon">
-                <img src="images/icon-twitter.svg" alt="Twitter logo" class="icon">
-                <img src="images/icon-pinterest.svg" alt="Pinterest logo" class="icon">
-              </div>
+            </div>
           </div>
         </div>
+      </article>
+      <div class="share-container hidden">
+        <p class="share-text">Share</p>
+        <img src="images/icon-facebook.svg" alt="Facebook logo" class="icon" />
+        <img src="images/icon-twitter.svg" alt="Twitter logo" class="icon" />
+        <img
+          src="images/icon-pinterest.svg"
+          alt="Pinterest logo"
+          class="icon"
+        />
       </div>
     </main>
 
@@ -73,7 +78,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">Pon Huang</a>.
     </footer>
     <script src="index.js"></script>
   </body>
